resources/sass/site2.scss
/* ... */
.leaflet-square-icon-gray {
  border: 1px solid rgba(211, 211, 211, 0.53) !important;
  background: rgba(189, 187, 187, 0.447);
  }

.leaflet-square-icon-green {
  border: 1px solid rgb(192, 233, 156) !important;
  background: rgb(129, 203, 83);
  }

.leaflet-square-icon-yellow {
  border: 1px solid lightgoldenrodyellow !important;
  background: yellow;
}

.leaflet-square-icon-orange {
  border: 1px solid rgb(245, 208, 140) !important;
  background: orange;
}

.leaflet-square-icon-red{
  border: 1px solid lightcoral !important;
  background: red ;
}

.leaflet-circle-icon-gray {
  background-color: gray;
  border-radius: 50%;
}
.leaflet-circle-icon-orange {
  background-color: orange;
  border-radius: 50%;;
}

.leaflet-circle-icon-red{
  background-color: red;
  border-radius: 50%;;
  }

.leaflet-circle-icon-blue{
  background-color: blue;
  border-radius: 50%;;
  }

.leaflet-circle-for-change{
  border: 3px solid rgba(255, 255, 255, 0.756) !important;
}
.show-static-text {
  width: 50%;
}

.inline {
  display: inline-grid;
}

.text-helper {
  font-size: 12px;
}

.scenario-settings {
  margin-left: 18rem;
  button {
    padding: 6px;
  }
}

.options-menu {
   padding: 10px;
}

.loader {
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
  border: 6px solid #f5f5f5;
  border-top: 6px solid   #ff7710;
  border-radius: 50%;
  width: 42px;
  height: 42px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

.wizard {
  padding-bottom: 0;
  .steps {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    border-bottom: 1px solid rgba(0,0,0,0.1);
    margin-left: -25px;
    margin-right: -25px;
    padding: 5px 20px 0;
    height: 56px;

    > a {
      text-decoration: none;
      text-transform: capitalize;
      display: flex;
      align-items: center;
      i {
        background-color: #999999;
        color: #ffffff;
        font-style: normal;
        padding: 5px 11px;
        margin-right: 10px;
        border-radius: 50%;
      }
      div {
        color: #999999;
        display: inline-block;
        &:after {
          content: "";
          position: absolute;
          height: 12px;
          min-width: 85px;
          margin-left: 10px;
          border-bottom: 1px solid rgba(0,0,0,0.1);
        }
      }
      &:last-child div:after {
        border: none;
      }
    }

    .complete {
      i {
        background-color: $mdc-theme-primary;
      }
      div {
        color: #000000;
      }
    }
    .active {
      @extend .complete;
      font-weight: 500;
    }
    .material-icons {
      font-size: 19px;
      display: inline;
      padding: 6px;
    }
  }
  .map {
    display: flex;
    align-items: stretch;
    min-height: 500px;
    height: calc(100% + 24px);
    min-width: 500px;
    margin: -24px -24px 0 0;

    > div {
      width: 100%;
      height: 100%;
    }
  }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

